cmake_minimum_required(VERSION 3.14)
project(leetcode_C)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode_C
        #        lcd/022_generateParenthesis_B.cpp
        #        lcd/022_generateParenthesis.cpp
        #        lcd/052_solveNQueens.cpp
        #        lcd/052_solveNQueens_A.cpp
        #        base/merge_sort_two_vec.cpp)
        #        base/merge_sort_two_vec_a.cpp)
        #        base/merge_sort_two_vec_c.cpp
        #        lcd/315_countSmaller.cpp
        #        lcd/TreeNode_stu.cpp
        #        lcd/113_pathSum.cpp
        #        lcd/236_lowest_common_ancestor_of_a_binary_tree.cpp
        #        lcd/114_flatten_binary_tree_to_linked_list.cpp
        #        base/BFS_print.cpp
        #        lcd/199_binary_tree_right_side_view.cpp
        #        base/Graph_base1.cpp
        #        base/Graph_base2.cpp
        #        base/Graph_base3.cpp
        #        base/Graph_base4.cpp
        #        lcd/207_canFinish.cpp
        #        lcd/207_canFinish2.cpp base/binary_search_base.cpp
        #        lcd/035_searchInsert.cpp
        #        lcd/034_searchRange.cpp
        #        lcd/033_search_in_rotated_sorted_array.cpp
        #        base/Binary_Sort_Tree.cpp
        #        lcd/449_serialize-and-deserialize-bst.cpp
        #        lcd/449_serialize-and-deserialize-bst1.cpp
        #        lcd/315_count_of_smaller_number_after_self.cpp
        #        base/hash_table_base.cpp
        #        lcd/409_longest-palindrome.cpp
        #        lcd/290_word-pattern.cpp
        #        lcd/049_group-anagrams.cpp
        #        lcd/003_longest-Substring-Without-Repeating-Characters.cpp
        #        lcd/187_repeated-dna-sequences.cpp
        #        lcd/076_minimum-window-substring.cpp
        #        lcd/200_number_of_islands.cpp
        #        lcd/127_word-ladder.cpp
        #        lcd/473_matchsticks-to-square.cpp)
        #        lcd/down_400/473_matchsticks-to-square1.cpp
        #        lcd/down_400/407_trapping-rain-water-ii.cpp
        #        lcd/down_000/070_climbing-stairs.cpp
        #        lcd/down_100/198_house-robber.cpp
        #        lcd/down_000/053_maximum-subarray.cpp
        #        lcd/down_300/322_coin-change_medium.cpp
        #        lcd/down_100/120_maximum-subarray-medium.cpp
        #        lcd/down_300/300_longest-increasing-subsequence-i.cpp
        #        lcd/down_000/064_minimum-path-sum-medium.cpp
        #        lcd/down_100/174_dungeon-game-hard.cpp
        #        base/Trie树.cpp)
        #        lcd/down_200/208_implement-trie-prefix-tree-medium.cpp
        #        lcd/down_200/211_add-and-search-word-data-structure-design-medium.cpp
        #        lcd/down_547/547_friend-circles-medium.cpp
        #        base/DisjoinSet1.cpp
        #        base/DisjoinSet2.cpp
        #        lcd/down_400/452_findMinArrowShots2.cpp
        lcd/down_000/092_reverseBetween.cpp)
