cmake_minimum_required(VERSION 3.14)
project(leetcode_C)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode_C
        #        lcd/400/456_find132pattern_medium.cpp
        #        lcd/2000/2013_trap_hard.cpp
        #        lcd/1100/1143_longestCommonSubsequence_medium.cpp
        #        lcd/000/081_search_medium.cpp
        lcd/200/208_trie_medium.cpp)
