cmake_minimum_required(VERSION 3.14)
project(leetcode_C)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode_C
        #        lcd/400/456_find132pattern_medium.cpp
        #        lcd/2000/2013_trap_hard.cpp
        #        lcd/1100/1143_longestCommonSubsequence_medium.cpp
        #        lcd/000/081_search_medium.cpp
        lcd/200/220_containsNearbyAlmostDuplicate_medium_1.cpp 大雪菜/背包问题01_simple.cpp 大雪菜/最长公共子序列.cpp 会代码的星星/P1880_NOI1995_石子合并.cpp 会代码的星星/没有上司的舞会.cpp awc/1076_medium.cpp 会代码的星星/test1.cpp NOI/2002_贪吃的九头龙.cpp loj/10157_皇宫看守_medium.cpp luogu/P1270_visit_galary_medium.cpp luogu/aaa.cpp DP/叠箱子_mothod1.cpp DP/买卖股票问题.cpp DP/最佳加法表达式_medium.cpp)
